# demo-knative

./: Dockerfile  azure.tf  pyproject.toml
app/: main.py
helm/templates/: api-knative-route.yaml  api-knative-service.yaml
