[tool.poetry]
name = "demo-knative"
version = "0.1.0"
description = ""
authors = ["MaxHoefl <hoefl.max@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
